Correções da fase 1

--- a/analise_de_requisitos.tex
+++ b/analise_de_requisitos.tex
@@ -1,23 +1,24 @@
 \section{Análise de requisitos}
 
 
-Identificado o problema, pretende-se assim desenvolver um sistema de informação para gestão de trabalhos práticos. O sistema oferecerá um conjunto de funcionalidades e facilidades aos docentes e alunos em todo o processo de entrega de um trabalho prático, desde a gestão da unidade curricular até à publicação das avaliações.\\
+Identificado o problema, pretende-se assim desenvolver um sistema de informação para gestão de trabalhos práticos. O sistema oferecerá um conjunto de funcionalidades e facilidades aos docentes e alunos em todo o processo de entrega de um trabalho prático, desde a gestão da unidade curricular até à publicação das avaliações.
 
-Identifica-se à partida 3 grupos de utilizadores com funcionalidades e objetivos diferentes em todo o processo.\\
+Identifica-se à partida 3 grupos de utilizadores com funcionalidades e objetivos diferentes em todo o processo.
 
-O primeiro grupo de utilizadores são os \textbf{alunos}, para estes pretende-se oferecer a possibilidade de submeterem projetos práticos de uma forma simples e facilitada. As submissões poderão ser efetuadas individualmente ou em grupos conforme o especificado pelo docente. O aluno terá acesso a um painel de gestão das suas unidades curriculares e projetos, poderá consultar todas as informações de um projeto e respetivas fases, gerir facilmente os seus grupos de trabalho, consultar o seu histórico de entregas e consultar em diferentes formatos as suas avaliações dos projetos e/ou fases. Pretende-se ainda que o aluno tenha a possibilidade de ser notificado de todas as alterações nos projetos que faz parte, através de avisos do sistema ou emails. Estas notificações serão também importantes para informar o aluno da aproximação dos prazos de entrega dos projetos das suas unidades curriculares.\\
+O primeiro grupo de utilizadores são os \textbf{alunos}, para estes pretende-se oferecer a possibilidade de submeterem projetos práticos de uma forma simples e facilitada. As submissões poderão ser efetuadas individualmente ou em grupos conforme o especificado pelo docente. O aluno terá acesso a um painel de gestão das suas unidades curriculares e projetos, poderá consultar todas as informações de um projeto e respetivas fases, gerir facilmente os seus grupos de trabalho, consultar o seu histórico de entregas e consultar em diferentes formatos as suas avaliações dos projetos e/ou fases. Pretende-se ainda que o aluno tenha a possibilidade de ser notificado de todas as alterações nos projetos que faz parte, através de avisos do sistema ou emails. Estas notificações serão também importantes para informar o aluno da aproximação dos prazos de entrega dos projetos das suas unidades curriculares.
+
 No processo de submissão de um projeto, o sistema, deverá ser capaz de facilitar a criação do \textit{Project Record} do pacote enviado, assim como identificar e notificar falhas na submissão, tais como não conter todos os ficheiros obrigatórios ou não gerar o executável pretendido. Neste caso os alunos poderão receber no email essa informação para assim submeterem uma versão corrigida.
-Um aluno terá também a possibilidade de tornar o projeto desenvolvido público.\\
+Um aluno terá também a possibilidade de tornar o projeto desenvolvido público.
 
 O segundo grupo de utilizadores são os \textbf{docentes}, numa primeira componente estes utilizadores poderão criar e gerir unidades curriculares e todas as informações adjacentes a estas, um docente de uma unidade curricular pode adicionar docentes responsáveis, adicionar alunos e associá­-los a diferentes turnos. Dentro da gestão de uma unidade curricular um docente será capaz de criar projetos devidamente documentados (organizados ou não em diferentes fases), podendo ainda especificar ficheiros obrigatórios, executável obrigatório e ficheiros de teste para facilitar a correção dos mesmos. Estes testes serão executados no programa enviado e serão guardadas as diferenças do output obtido para o output esperado. Dentro do painel de gestão de um projeto o docente poderá consultar as entregas dos diferentes grupos e avaliar as entregas por grupo ou individualmente. Depois de avaliadas as entregas, o docente, poderá gerar automaticamente as pautas do projeto e/ou fase e publicar para os alunos da unidade curricular.
-Numa fase final, o docente poderá tornar o projeto (enunciado e especificações do problema) público.\\
+Numa fase final, o docente poderá tornar o projeto (enunciado e especificações do problema) público.
 
-Para além dos docentes e dos alunos, o nosso sistema permitirá uma procura e consulta de projetos públicos desenvolvidos a \textbf{utilizadores não registados}.\\
+Para além dos docentes e dos alunos, o nosso sistema permitirá uma procura e consulta de projetos públicos desenvolvidos a \textbf{utilizadores não registados}.
 
-Pretende-se no desenvolvimento do sistema simplificar todas as tarefas dos utilizadores alvo do sistema, e proporcionar um sistema flexível que possa ser utilizado por um abrangente número de utilizadores.\\
+Pretende-se no desenvolvimento do sistema simplificar todas as tarefas dos utilizadores alvo do sistema, e proporcionar um sistema flexível que possa ser utilizado por um abrangente número de utilizadores.
 
-Nesse seguimento o sistema procurará ser flexível, não se restringindo a apenas uma abordagem nem sendo demasiado genérico, procurar-se-á definir abordagens mais específicas, mas sempre com opções mais genéricas para englobar casos menos comuns. É exemplo disso a geração automática do \textit{Project Record} do pacote enviado, em casos mais específicos o ficheiro poderá ser entregue pelo utilizador, no entanto em outros casos torna-se necessário auxiliar na geração desse mesmo ficheiro para assegurar que todos os pacotes enviados estão em conformidade com a estrutura esperada de um pacote. O sistema também procurará simplificar processos organizacionais, como facilitar a criação de uma unidade curricular identificando apenas nome, instituição, curso e ano letivo. O facto de uma unidade curricular estar associada a um ano letivo ajuda a nível organizacional e permite que não seja necessária a transferência de alunos e docentes entre anos letivos. Procurará também simplificar processos de validação das entregas através das restrições de ficheiros obrigatórios e nome do executável. Ser capaz de automatizar a avaliação através dos testes no sistema e geração de pautas automáticas e de gerir mais facilmente grupos de trabalho e respetivas entregas.\\
+Nesse seguimento o sistema procurará ser flexível, não se restringindo a apenas uma abordagem nem sendo demasiado genérico, procurar-se-á definir abordagens mais específicas, mas sempre com opções mais genéricas para englobar casos menos comuns. É exemplo disso a geração automática do \textit{Project Record} do pacote enviado, em casos mais específicos o ficheiro poderá ser entregue pelo utilizador, no entanto em outros casos torna-se necessário auxiliar na geração desse mesmo ficheiro para assegurar que todos os pacotes enviados estão em conformidade com a estrutura esperada de um pacote. O sistema também procurará simplificar processos organizacionais, como facilitar a criação de uma unidade curricular identificando apenas nome, instituição, curso e ano letivo. O facto de uma unidade curricular estar associada a um ano letivo ajuda a nível organizacional e permite que não seja necessária a transferência de alunos e docentes entre anos letivos. Procurará também simplificar processos de validação das entregas através das restrições de ficheiros obrigatórios e nome do executável. Ser capaz de automatizar a avaliação através dos testes no sistema e geração de pautas automáticas e de gerir mais facilmente grupos de trabalho e respetivas entregas.
 
-O objetivo final é lançar um sistema bem focado onde cada grupo de utilizadores execute com facilidade as suas tarefas principais, perdendo o menor tempo possível em problemas secundários. 
+O objetivo final é lançar um sistema bem focado onde cada grupo de utilizadores execute com facilidade as suas tarefas principais, perdendo o menor tempo possível em problemas secundários.
 
 \newpage
