--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,8 @@
 \usepackage{spverbatim}
 \usepackage{hyperref}
 \usepackage{enumitem}
+\usepackage{indentfirst}
+\usepackage{lscape}
 
 \setdescription{leftmargin=\parindent,labelindent=\parindent}
 
