--- a/anexos.tex
+++ b/anexos.tex
@@ -1,7 +1,10 @@
-\section{Anexos}
-\begin{figure}[H] 
-	\centering
-	\includegraphics[width=0.3\textwidth]{images/plano_de_trabalho/gannt_0.png}
- 	\caption{Diagrama de Gantt completo}
- 	\label{fig: workplan0}
-\end{figure}
+\appendix
+\begin{landscape}
+	\section{Diagrama de Gantt}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1.7\textwidth]{images/plano_de_trabalho/gannt_0.png}
+	 	\caption{Diagrama de Gantt completo}
+	 	\label{fig: workplan0}
+	\end{figure}
+\end{landscape}
