--- a/modelo_de_dados.tex
+++ b/modelo_de_dados.tex
@@ -9,7 +9,7 @@ Pode-se classificar como domínio do sistema, o conjunto de características que
 
 Pode-se consultar na Figura ~\ref{fig:modelo-dominio} os termos do sistema e as relações existentes entre esses termos.
 
-\begin{figure}[H] 
+\begin{figure}[H]
   \centering
   \includegraphics[width=1\textwidth,center]{images/modelo_dados/modelo-dominio}
   \caption{Modelo de domínio}
@@ -20,11 +20,11 @@ Pode-se consultar na Figura ~\ref{fig:modelo-dominio} os termos do sistema e as 
 
 Para representar a estrutura e relações das classes que servirão de modelo para os objetos do sistema, utilizaremos um \textbf{Diagrama de Classes}. Os diagramas de Classes são extremamente úteis para o desenvolvimento de sistemas, pois definem todas as classes que irão constituir o sistema e são uma excelente base para outras fases de planeamento e para o desenvolvimento.
 
-Este tipo de diagramas permitem verificar como cada classe se relaciona com as outras, tendo como objetivo, a satisfação dos requisitos funcionais definidos para o sistema em estudo. 
+Este tipo de diagramas permitem verificar como cada classe se relaciona com as outras, tendo como objetivo, a satisfação dos requisitos funcionais definidos para o sistema em estudo.
 
 Na Figura ~\ref{fig:diagrama-classes} podem-se ver representadas todas as classes e as suas relações que servirão como modelo para os objetos do sistema.
 
-\begin{figure}[H] 
+\begin{figure}[H]
   \centering
   \includegraphics[width=1\textwidth,center]{images/modelo_dados/diagrama-classes}
   \caption{Diagrama de Classes}
@@ -33,59 +33,59 @@ Na Figura ~\ref{fig:diagrama-classes} podem-se ver representadas todas as classe
 
 \subsection{Gramática Independente de Contexto}
 
-Alternativamente ao Diagrama de Classes, definiu-se o sistema numa gramática independente de contexto na forma \textbf{Extended Backus-Naur(EBNF)}, representada de seguida:
+Alternativamente ao Diagrama de Classes, definiu-se o sistema numa gramática independente de contexto na forma \textbf{Extended Backus-Naur (EBNF)}, representada de seguida:
 
 \begin{spverbatim}
-Institution : Course+ name=STRING 
+Institution : Course+ name=STRING
             ;
 
-Course : Subject+ name=STRING 
+Course : Subject+ name=STRING
        ;
 
-Subject : name=STRING academic_year=STRING Responsible Shift+ Teacher+ Student+ Project+ 
+Subject : name=STRING academic_year=STRING Responsible Shift+ Teacher+ Student+ Project+
         ;
 
-Project : name=STRING description=TEXT begin_date=DATETIME end_date=DATETIME public=BOOLEAN grades=BOOLEAN max_elems=INT min_elems=INT open=BOOLEAN Group+ Notification+ Phase+ statement=File?
+Project : name=STRING description=TEXT begin_date=DATETIME end_date=DATETIME public=BOOLEAN grades=BOOLEAN max_elems=INT min_elems=INT open=BOOLEAN Group+ Notification+ Phase+ statement=Document?
         ;
 
-Notification : title=STRING body=TEXT date=DATETIME Group+ 
+Notification : title=STRING body=TEXT date=DATETIME Group+
              ;
 
-Shift : name=STRING Subject Student* 
+Shift : name=STRING Subject Student*
       ;
 
-Phase : name=STRING description=TEXT begin_date=DATETIME end_date=DATETIME executable=STRING grades=BOOLEAN open=BOOLEAN File* statement=File? Required_File+ Delivery+ Test* 
+Phase : name=STRING description=TEXT begin_date=DATETIME end_date=DATETIME executable=STRING grades=BOOLEAN open=BOOLEAN Document* statement=Document? Required_Document+ Delivery+ Test*
       ;
 
-File : name=STRING description=STRING notes=TEXT file=PAPERCLIP_FILE 
+Document : name=STRING description=STRING notes=TEXT file=PAPERCLIP_FILE
      ;
 
-Test : diff=TEXT input=File output=File 
+Test : diff=TEXT input=Document output=Document
      ;
 
-Required_File : name=STRING description=TEXT 
+Required_Document : name=STRING description=TEXT
               ;
 
-Delivery : description=TEXT grades=BOOLEAN public=BOOLEAN Grade* Group 
+Delivery : description=TEXT evaluated=BOOLEAN public=BOOLEAN Grade* Group
          ;
 
-Grade : value=FLOAT comments=TEXT Student 
+Grade : value=FLOAT comments=TEXT Student
       ;
 
-Group : identifier=STRING Notification+ Delivery* Student+ 
+Group : identifier=STRING Notification+ Delivery* Student+
       ;
 
-Student : User identifier=STRING Shift+ Group+ Subject+ 
+Student : User identifier=STRING Shift+ Group+ Subject+
         ;
 
-Teacher : User Subject+ 
+Teacher : User Subject+
         ;
 
-User : name=STRING email=STRING description=TEXT phone=STRING image=PAPERCLIP_FILE 
+User : name=STRING email=STRING description=TEXT phone=STRING image=PAPERCLIP_FILE
      ;
 
-Responsible : Teacher 
-            ;            
+Responsible : Teacher
+            ;
 \end{spverbatim}
 
 
