Correções e estrutura para a segunda fase

--- a/environments/resumo.tex
+++ b/environments/resumo.tex
@@ -1,14 +1,14 @@
-\section{Resumo}
+\begin{abstract}
 
   Este relatório cobre todo o processo de planeamento, desenvolvimento e
   documentação de um sistema que resolva um problema abordado na UCE de
-  Engenharia de Linguagens na forma de Projecto Integrado, nomeadamente
+  Engenharia de Linguagens na forma de Projeto Integrado, nomeadamente
   a gestão de trabalhos práticos académicos desde a sua criação pelos docentes, à resolução pelos alunos
   e à publicação dos mesmos ao resto da comunidade \textit{online}.
 
-  A abordagem na resolução deste projecto passa por aliar todos os conhecimentos
+  A abordagem na resolução deste projeto passa por aliar todos os conhecimentos
   adquiridos nos módulos integrantes de Engenharia de Linguagens, passando por
- Engenharia Gramatical, Scripting no Processamento de Linguagem Natural, Processamento
+ Engenharia Gramatical, \textit{Scripting} no Processamento de Linguagem Natural, Processamento
  Estruturado de Documentos e Análise e Transformação de Software.
 
  Neste sentido pretende-se aliar ao desenvolvimento deste sistema conhecimentos
@@ -17,5 +17,7 @@
  eficiência, automatização de tarefas e transformações, utilização de expressões
  regulares, linguagens DSL, corpora, automatização de testes para diferentes
  linguagens de programação, manipulação de documentos estruturados, utilização
- de XML, XSL e XSLFO, documentos anotados, publicação de conhecimento na web,
+ de XML, XSL e XSL-FO, documentos anotados, publicação de conhecimento na web,
  entre outros.
+
+\end{abstract}
