--- a/main.tex
+++ b/main.tex
@@ -36,27 +36,27 @@
 \titleTH
 \newpage
 
-\input{resumo}
+\input{environments/resumo}
 \newpage
 
 \tableofcontents
 \newpage
 
-\input{introducao}
-\input{plano_de_trabalho}
-\input{analise_do_problema}
-\input{analise_de_requisitos}
-\input{concorrencia_e_alternativas}
-\input{casos_de_estudo}
-\input{arquitetura_do_sistema}
-\input{modelo_de_dados}
-\input{repositorio_de_informacao}
-\input{funcionalidades_do_sistema}
-\input{prototipos}
-\input{proposta_tecnologica}
-\input{estado_do_desenvolvimento}
-\input{conclusao}
-\input{anexos}
-\input{bibliografia}
+\input{sections/introducao}
+\input{sections/plano_de_trabalho}
+\input{sections/analise_do_problema}
+\input{sections/analise_de_requisitos}
+\input{sections/concorrencia_e_alternativas}
+\input{sections/casos_de_estudo}
+\input{sections/arquitetura_do_sistema}
+\input{sections/modelo_de_dados}
+\input{sections/repositorio_de_informacao}
+\input{sections/funcionalidades_do_sistema}
+\input{sections/prototipos}
+\input{sections/proposta_tecnologica}
+\input{sections/solucoes_implementadas}
+\input{sections/estado_do_desenvolvimento}
+\input{sections/proximos_objetivos}
+\input{sections/conclusao}
 
 \end{document}
