--- a/sections/casos_de_estudo.tex
+++ b/sections/casos_de_estudo.tex
@@ -1,10 +1,8 @@
 \section{Casos de estudo}
 De forma a verificar a viabilidade da aplicação decidiu-se usar três casos reais. Nesse sentido irá se explorar cada um dos casos de forma a explorar como a aplicação resolve os problemas expostos.
 
-\subsection{Engenharia de Linguagens} % (fold)
+\subsection{Engenharia de Linguagens}
 \label{sub:engenharia_de_linguagens}
-
-% subsection engenharia_de_linguagens (end)
 
 No primeiro caso tem-se o Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática da Universidade do Minho.
 Engenharia de Linguagens tem um turno e quatro docentes.
@@ -18,19 +16,15 @@ Um aluno uma vez registado e autenticado inscreve-se na cadeira e acede ao paine
 
 Voltando ao docente, este acede novamente ao painel do projeto e abre a página de entrega de um projeto submetido. Após analisar o relatório ou qualquer outro ficheiro enviado, carrega em avaliar e atribui a nota ao grupo ou a cada elemento individualmente, podendo também adicionar comentários sobre a nota atribuída.
 
-\subsection{Estatística} % (fold)
+\subsection{Estatística}
 \label{sub:estat_stica}
-
-% subsection estat_stica (end)
 
 No segundo caso tem-se como exemplo um projeto da cadeira de Estatística do curso de Economia. Esta cadeira tem quatro turnos e dois docentes. Quanto ao projeto tem que ser feito em grupos de dois ou três elementos, restringido a alunos do mesmo turno, tem apenas uma fase, existe um ficheiro com dados para auxilio da realização do projeto e no momento da entrega além do relatório tem-se que enviar os resultados obtidos no \emph{SPSS} que estão no formato \emph{SAV}.
 
 O processo começa pelo registo da cadeira no sistema após o registo e identificação do docente. Assumindo que todos os alunos já se inscreveram na disciplina é feito a inscrição dos alunos em cada turno por parte do docente. De seguida cria-se o projeto no qual se indica o enunciado do projeto, o ficheiro de dados, restringe-se os grupos para que estes sejam constituídos por elementos do mesmo turno e que a dimensão deste seja de dois a três elementos e indica-se quais os ficheiros obrigatórios no momento da entrega. Por último os alunos submetem o projeto feito e o docente indica a nota do mesmo tal como acontece no primeiro caso.
 
-\subsection{Desafios de Proramação da Universidade do Minho} % (fold)
+\subsection{Desafios de Proramação da Universidade do Minho}
 \label{sub:desafios_de_prorama_o_da_universidade_do_minho}
-
-% subsection desafios_de_prorama_o_da_universidade_do_minho (end)
 
 No terceiro e último caso pretende-se submeter os desafios algorítmicos dos Desafios de Programação da Universidade do Minho (DPUM). Estes desafios são feitos individualmente e são corregidos automaticamente pela aplicação. Não é necessário entregar relatório e não existe data limite de submissão.
 
@@ -40,9 +34,4 @@ Assumindo que já existe o registo e autenticação do docente no sistema, proce
 
 Na criação de um desafio indica-se que se pretende que haja correção automática, faz-se \emph{upload} dos ficheiros de \emph{input} e \emph{output} e que os grupos sejam de um único elemento. Para o aluno no momento da submissão não é necessário criar grupo. Após a submissão de um desafio é enviado um \emph{mail} para o aluno com os resultados da correção automática.
 
-
 \newpage
-
-
-
-
