--- a/sections/concorrencia_e_alternativas.tex
+++ b/sections/concorrencia_e_alternativas.tex
@@ -2,7 +2,7 @@
 
 Uma das medidas efetuadas durante o planeamento da aplicação foi a análise de concorrência e o estudo das alternativas existentes. Desta forma foi possível adicionar mais funcionalidades à aplicação de forma a que esta fosse o mais completa possível.
 
-\subsection{Concorrência} % (fold)
+\subsection{Concorrência}
 \label{sub:concorrencia}
 
 De todas as aplicações concorrentes, as que mais se destacam são os Sistemas de Gestão de Aprendizagem (\emph{SGA}),também conhecidas por \emph{Learning Management Systems} - \emph{LMS}. Dentro dos \emph{SGA} imperam as seguintes aplicações:
@@ -13,7 +13,7 @@ De todas as aplicações concorrentes, as que mais se destacam são os Sistemas 
 	\item \emph{Haiku LMS}
 \end{itemize}
 
-\subsubsection{Blackboard} % (fold)
+\subsubsection{Blackboard}
 \label{ssub:blackboard}
 
 \begin{figure}[H]
@@ -33,7 +33,7 @@ A aplicação \href{http://www.blackboard.com}{\emph{Blackboard}} é composta po
 
 Os projetos criados na \emph{Blackboard} não estão disponíveis para o público. Também não existe a noção de turnos, sendo estes substituídos pelos grupos. Os grupos são criados dentro da disciplina e um aluno pode estar inscrito em múltiplos grupos.
 
-\subsubsection{Moodle} % (fold)
+\subsubsection{Moodle}
 \label{ssub:moodle}
 \begin{figure}[H]
         \centering
@@ -52,7 +52,7 @@ A aplicação \href{http://www.moodle.org}{\emph{Moodle}} é composta por três 
 
 Um dos problemas do \emph{Moodle} é a inexistência de grupos e de turnos. Quanto a projetos públicos apenas se estes forem inseridos manualmente pelos alunos nos seus portefólios.
 
-\subsubsection{Studifi} % (fold)
+\subsubsection{Studifi}
 \label{ssub:studifi}
 
 \begin{figure}[H]
@@ -72,8 +72,7 @@ A aplicação \href{https://studifi.com/}{\emph{Studifi}} é composta por três 
 
 No \emph{Studifi} os exercícios não estão disponíveis para o público. Uma das características que se destaca nesta aplicação é a existência de controlo de versões nos ficheiros submetidos.
 
-
-\subsubsection{Haiku LMS} % (fold)
+\subsubsection{Haiku LMS}
 \label{ssub:haiku_lms}
 
 \begin{figure}[H]
@@ -91,7 +90,7 @@ A aplicação \href{http://www.haikulearning.com/}{\emph{Haiku LMS}} é composta
 	\item[Instituições de ensino] Responsáveis pela gestão de cursos e disciplinas da instituição.
 \end{description}
 
-\subsection{Alternativas} % (fold)
+\subsection{Alternativas}
 \label{sub:alternativas}
 
 No que diz ao respeito às alternativas, estas são divididas em cinco situações:
@@ -131,12 +130,5 @@ No que diz ao respeito às alternativas, estas são divididas em cinco situaçõ
 	\end{description}
 
 \end{itemize}
-
-
-
-
-% subsection submiss_o_de_trabalhos (end)
-
-% subsection alternativas (end)
 
 \newpage
