--- a/sections/prototipos.tex
+++ b/sections/prototipos.tex
@@ -10,5 +10,5 @@ Um dos processos de desenvolvimento de uma Aplicação Web é a criação de pro
 	\item[Maximizar a satisfação] A aplicação transmite confiança e segurança ao utilizador
 \end{description}
 
-\input{primeiros_prototipos}
-\input{prototipos_fidedignos}
+\input{sections/prototipos/primeiros_prototipos}
+\input{sections/prototipos/prototipos_fidedignos}
