Página inicial e autenticação

--- a/sections/implementacao/alunos/entregas.tex
+++ b/sections/implementacao/alunos/entregas.tex
@@ -1,1 +1,8 @@
 \subsubsection{Gestão de fases e entregas}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/deliveries}
+  \caption{Página de gestão de fases entregas}
+  \label{fig:student_deliveries}
+\end{figure}
