--- a/sections/implementacao/alunos/grupos.tex
+++ b/sections/implementacao/alunos/grupos.tex
@@ -1,1 +1,15 @@
 \subsubsection{Gestão de grupos de trabalho}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/groups_add}
+  \caption{Página de gestão de grupos de trabalho}
+  \label{fig:student_groups_add}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/groups_create}
+  \caption{Página de gestão de grupos de trabalho}
+  \label{fig:student_groups_create}
+\end{figure}
