--- a/sections/implementacao/alunos/painel_aluno.tex
+++ b/sections/implementacao/alunos/painel_aluno.tex
@@ -1,1 +1,8 @@
 \subsubsection{Página inicial}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/dashboard}
+  \caption{Painel do aluno}
+  \label{fig:student_dashboard}
+\end{figure}
