--- a/sections/implementacao/alunos/projeto.tex
+++ b/sections/implementacao/alunos/projeto.tex
@@ -1,1 +1,8 @@
 \subsubsection{Página de projeto}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/project}
+  \caption{Página de projeto}
+  \label{fig:student_project}
+\end{figure}
