--- a/sections/implementacao/alunos/ucs.tex
+++ b/sections/implementacao/alunos/ucs.tex
@@ -1,1 +1,8 @@
 \subsubsection{Gestão de unidades curriculares}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/subjects}
+  \caption{Página de gestão de unidades curriculares}
+  \label{fig:student_subjects}
+\end{figure}
