--- a/sections/solucoes_implementadas.tex
+++ b/sections/solucoes_implementadas.tex
@@ -1,5 +1,9 @@
 \section{Soluções implementadas}
 
+Nesta secção serão referidas todas as soluções já implementadas para o problema descrito.
+
+Serão demonstradas todas as páginas e funcionalidades já implementadas, com justificações para as decisões tomadas.
+
 \input{sections/implementacao/home_page}
 \input{sections/implementacao/login}
 \input{sections/implementacao/registo}
