--- a/sections/implementacao/home_page.tex
+++ b/sections/implementacao/home_page.tex
@@ -15,7 +15,7 @@ Depois de frases de incentivo ao registo e imagens demonstrativas, são listadas
 Nesta página os utilizadores não registados, para além de consultar as funcionalidades do sistema, podem aceder ao mapa do site, sobre nós, pesquisar por projetos públicos e entrar ou registar no sistema.
 Os utilizadores registados para além das possibilidades referidas, podem aceder a um painel de gestão de projetos e unidades curriculares.\\ 
 
-Na Figura~\ref{fig:home_page} pode ser consultada uma imagem demonstrativa da página desenvolvida.\\
+Na Figura~\ref{fig:home_page} pode ser consultada uma imagem demonstrativa da página desenvolvida.
 
 \begin{figure}[H]
   \centering
