--- a/sections/implementacao/alunos.tex
+++ b/sections/implementacao/alunos.tex
@@ -1,5 +1,15 @@
 \subsection{Painel do aluno}
 
+Nesta secção serão referidas todas as soluções já implementadas para o painel do aluno.
+
+Serão demonstradas todas as páginas e funcionalidades já implementadas para este tipo de utilizadores, com justificações para as decisões tomadas.\\
+
+Em todas as páginas, o aluno terá acesso a um cabeçalho onde poderá voltar à página inicial, ao carregar no logótipo, ou terminar a sua sessão no botão mais à direita.
+
+Para além do referido cabeçalho o aluno terá acesso a uma barra lateral, onde poderá aceder às páginas de edição do perfil, página inicial do painel do aluno, calendário, gestão projetos, gestão de unidades curriculares e gestão de avaliações.
+
+O aluno terá ainda acesso a uma barra de navegação que lhe permitirá saber sempre em que página do sistema se encontra, e voltar para páginas anteriores.
+
 \input{sections/implementacao/alunos/painel_aluno}
 \input{sections/implementacao/alunos/projeto}
 \input{sections/implementacao/alunos/grupos}
