Adicionado Avaliações de um aluno

--- a/sections/implementacao/alunos/avaliacoes.tex
+++ b/sections/implementacao/alunos/avaliacoes.tex
@@ -1,1 +1,16 @@
 \subsubsection{Gestão de avaliações}
+
+A página de avaliações contém um resumo das avaliações a que um aluno foi sujeito. Esta apresenta as unidades curriculares em que o aluno está inscrito, organizadas pelo ano letivo. Apenas são mostradas unidades curriculares que contêm projetos.
+
+Em cada unidade curricular é feita uma referência ao curso a que esta se refere e são listados os seus projetos.
+
+Para cada projeto, além da respetiva nota, também são listadas as suas fases e respetiva nota.
+
+Na Figura~\ref{fig:student_grades} pode ser consultada uma imagem demonstrativa da página desenvolvida.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth,center]{images/implementacao/alunos/grades}
+  \caption{Avaliações de um aluno}
+  \label{fig:student_grades}
+\end{figure}
