--- a/sections/implementacao/alunos/avaliacoes.tex
+++ b/sections/implementacao/alunos/avaliacoes.tex
@@ -1,6 +1,6 @@
 \subsubsection{Gestão de avaliações}
 
-A página de Avaliações contém um resumo do das avaliações à que um aluno foi sujeito. Esta apresenta as unidades curriculares em que o aluno está inscrito, organizada pelo ano letivo destas. Apenas são mostradas unidades curriculares que contêm projetos.
+A página de avaliações contém um resumo do das avaliações à que um aluno foi sujeito. Esta apresenta as unidades curriculares em que o aluno está inscrito, organizada pelo ano letivo destas. Apenas são mostradas unidades curriculares que contêm projetos.
 
 Em cada unidade curricular é feita uma referência ao curso do a que esta se refere e é listado os projetos desta.
 
